--- a/dhall.html
+++ b/dhall.html
@@ -3,11 +3,109 @@
   <head>
     <meta charset="utf-8">
     <title>Grinnell College Dining Hall</title>
-    <link rel="stylesheet" type="text/css" href="lab.css">
+    <link rel="stylesheet" type="text/css" href="dhall.css">
     <script type="text/javascript" src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
     <h1>Grinnell College Dining Hall </h1>
     <script type="text/javascript" src="dhall.js"></script>
+
+	<h4>Semester</h4>
+	<div class="checkbox">
+	  <label><input id="Select All Semester" type="checkbox" checked> Select All</label>
+	</div>
+	<div class="checkbox">
+	  <label><input id="Fall 2014" type="checkbox" checked> Fall 2014</label>
+	</div>
+	<div class="checkbox">
+	  <label><input id="Spring 2015" type="checkbox" checked> Spring 2015</label>
+	</div>
+	<div class="checkbox">
+	  <label><input id="Fall 2015" type="checkbox" checked> Fall 2015</label>
+	</div>
+	<div class="checkbox">
+	  <label><input id="Spring 2016" type="checkbox" checked> Spring 2016</label>
+	</div>
+	<h4>Week</h4>
+	<div class="checkbox">
+	  <label><input id="Select All Week" type="checkbox" checked> Select All</label>
+	</div>
+	<div class="checkbox">
+	  <label><input id="Week 1" type="checkbox" checked> Week 1</label>
+	</div>
+	<div class="checkbox">
+	  <label><input id="Week 2" type="checkbox" checked> Week 2</label>
+	</div>
+	<div class="checkbox">
+	  <label><input id="Week 3" type="checkbox" checked> Week 3</label>
+	</div>
+	<div class="checkbox">
+	  <label><input id="Week 4" type="checkbox" checked> Week 4</label>
+	</div>
+	<div class="checkbox">
+	  <label><input id="Week 5" type="checkbox" checked> Week 5</label>
+	</div>
+	<div class="checkbox">
+	  <label><input id="Week 6" type="checkbox" checked> Week 6</label>
+	</div>
+	<div class="checkbox">
+	  <label><input id="Week 7" type="checkbox" checked> Week 7</label>
+	</div>
+	<div class="checkbox">
+	  <label><input id="Week 8" type="checkbox" checked> Week 8</label>
+	</div>
+	<div class="checkbox">
+	  <label><input id="Week 9" type="checkbox" checked> Week 9</label>
+	</div>
+	<div class="checkbox">
+	  <label><input id="Week 10" type="checkbox" checked> Week 10</label>
+	</div>
+	<div class="checkbox">
+	  <label><input id="Week 11" type="checkbox" checked> Week 11</label>
+	</div>
+	<div class="checkbox">
+	  <label><input id="Week 12" type="checkbox" checked> Week 12</label>
+	</div>
+	<div class="checkbox">
+	  <label><input id="Week 13" type="checkbox" checked> Week 13</label>
+	</div>
+	<div class="checkbox">
+	  <label><input id="Week 14" type="checkbox" checked> Week 14</label>
+	</div>
+	<div class="checkbox">
+	  <label><input id="Week 15" type="checkbox" checked> Week 15</label>
+	</div>
+	<h4>Day of Week</h4>
+	<div class="checkbox">
+	  <label><input id="Select All Days" type="checkbox" checked> Select All</label>
+	</div>
+	<div class="checkbox">
+	  <label><input id="monday" type="checkbox" checked> Monday</label>
+	</div>
+	<div class="checkbox">
+	  <label><input id="tuesday" type="checkbox" checked> Tuesday</label>
+	</div>
+	<div class="checkbox">
+	  <label><input id="wednesday" type="checkbox" checked> Wednesday</label>
+	</div>
+	<div class="checkbox">
+	  <label><input id="thursday" type="checkbox" checked> Thursday</label>
+	</div>
+	<div class="checkbox">
+	  <label><input id="friday" type="checkbox" checked> Friday</label>
+	</div>
+	<div class="checkbox">
+	  <label><input id="saturday" type="checkbox" checked> Saturday</label>
+	</div>
+	<div class="checkbox">
+	  <label><input id="sunday" type="checkbox" checked> Sunday</label>
+	</div>
+	<h4>Dining Option</h4>
+	<div class="checkbox">
+	  <label><input id="Dining in" type="checkbox" checked> Dining In</label>
+	</div>
+	<div class="checkbox">
+	  <label><input id="To-Go Box" type="checkbox" checked> To-Go Box</label>
+	</div>
   </body>
 </html>
