refactored array names, added crossfilter as dependency

--- a/dhall.html
+++ b/dhall.html
@@ -5,6 +5,7 @@
     <title>Grinnell College Dining Hall</title>
     <link rel="stylesheet" type="text/css" href="dhall.css">
     <script type="text/javascript" src="https://d3js.org/d3.v4.min.js"></script>
+     <script src="crossfilter.min.js"></script>
   </head>
   <body>
     <h1>Grinnell College Dining Hall </h1>
