--- a/dhall.html
+++ b/dhall.html
@@ -11,96 +11,50 @@
     <h1>Grinnell College Dining Hall </h1>
     <script type="text/javascript" src="dhall.js"></script>
 
+
 	<h4>Semester</h4>
-	<div class="checkbox">
-	  <label><input id="Select All Semester" type="checkbox" checked> Select All</label>
-	</div>
-	<div class="checkbox">
-	  <label><input id="Fall 2014" type="checkbox" checked> Fall 2014</label>
-	</div>
-	<div class="checkbox">
-	  <label><input id="Spring 2015" type="checkbox" checked> Spring 2015</label>
-	</div>
-	<div class="checkbox">
-	  <label><input id="Fall 2015" type="checkbox" checked> Fall 2015</label>
-	</div>
-	<div class="checkbox">
-	  <label><input id="Spring 2016" type="checkbox" checked> Spring 2016</label>
-	</div>
+          <select id="semester">
+            <option value="all" selected>All</option>
+            <option value="F14">Fall 2014</option>
+            <option value="S15">Spring 2015</option>
+	    <option value="F15">Fall 2015</option>
+            <option value="S16">Spring 2016</option>
+          </select>
+
+
 	<h4>Week</h4>
-	<div class="checkbox">
-	  <label><input id="Select All Week" type="checkbox" checked> Select All</label>
-	</div>
-	<div class="checkbox">
-	  <label><input id="Week 1" type="checkbox" checked> Week 1</label>
-	</div>
-	<div class="checkbox">
-	  <label><input id="Week 2" type="checkbox" checked> Week 2</label>
-	</div>
-	<div class="checkbox">
-	  <label><input id="Week 3" type="checkbox" checked> Week 3</label>
-	</div>
-	<div class="checkbox">
-	  <label><input id="Week 4" type="checkbox" checked> Week 4</label>
-	</div>
-	<div class="checkbox">
-	  <label><input id="Week 5" type="checkbox" checked> Week 5</label>
-	</div>
-	<div class="checkbox">
-	  <label><input id="Week 6" type="checkbox" checked> Week 6</label>
-	</div>
-	<div class="checkbox">
-	  <label><input id="Week 7" type="checkbox" checked> Week 7</label>
-	</div>
-	<div class="checkbox">
-	  <label><input id="Week 8" type="checkbox" checked> Week 8</label>
-	</div>
-	<div class="checkbox">
-	  <label><input id="Week 9" type="checkbox" checked> Week 9</label>
-	</div>
-	<div class="checkbox">
-	  <label><input id="Week 10" type="checkbox" checked> Week 10</label>
-	</div>
-	<div class="checkbox">
-	  <label><input id="Week 11" type="checkbox" checked> Week 11</label>
-	</div>
-	<div class="checkbox">
-	  <label><input id="Week 12" type="checkbox" checked> Week 12</label>
-	</div>
-	<div class="checkbox">
-	  <label><input id="Week 13" type="checkbox" checked> Week 13</label>
-	</div>
-	<div class="checkbox">
-	  <label><input id="Week 14" type="checkbox" checked> Week 14</label>
-	</div>
-	<div class="checkbox">
-	  <label><input id="Week 15" type="checkbox" checked> Week 15</label>
-	</div>
+          <select id="week">
+            <option value="all" selected>All</option>
+            <option value="1">Week 1</option>
+            <option value="2">Week 2</option>
+	    <option value="3">Week 3</option>
+            <option value="4">Week 4</option>
+	    <option value="5">Week 5</option>
+            <option value="6">Week 6</option>
+	    <option value="7">Week 7</option>
+            <option value="8">Week 8</option>
+	    <option value="9">Week 9</option>
+            <option value="10">Week 10</option>
+	    <option value="11">Week 11</option>
+            <option value="12">Week 12</option>
+	    <option value="13">Week 13</option>
+            <option value="14">Week 14</option>
+	    <option value="15">Week 15</option>
+          </select>
+
 	<h4>Day of Week</h4>
-	<div class="checkbox">
-	  <label><input id="Select All Days" type="checkbox" checked> Select All</label>
-	</div>
-	<div class="checkbox">
-	  <label><input id="monday" type="checkbox" checked> Monday</label>
-	</div>
-	<div class="checkbox">
-	  <label><input id="tuesday" type="checkbox" checked> Tuesday</label>
-	</div>
-	<div class="checkbox">
-	  <label><input id="wednesday" type="checkbox" checked> Wednesday</label>
-	</div>
-	<div class="checkbox">
-	  <label><input id="thursday" type="checkbox" checked> Thursday</label>
-	</div>
-	<div class="checkbox">
-	  <label><input id="friday" type="checkbox" checked> Friday</label>
-	</div>
-	<div class="checkbox">
-	  <label><input id="saturday" type="checkbox" checked> Saturday</label>
-	</div>
-	<div class="checkbox">
-	  <label><input id="sunday" type="checkbox" checked> Sunday</label>
-	</div>
+          <select id="day">
+            <option value="all" selected>All</option>
+            <option value="monday">Monday</option>
+            <option value="tuesday">Tuesday</option>
+	    <option value="wednesday">Wednesday</option>
+            <option value="thursday">Thursday</option>
+	    <option value="friday">Friday</option>
+            <option value="saturday">Saturday</option>
+	    <option value="sunday">Sunday</option>
+	</select>
+	
+	
 	<h4>Dining Option</h4>
 	<div class="checkbox">
 	  <label><input id="Dining in" type="checkbox" checked> Dining In</label>
