Hi Dennis, we are sitting next to each otheR

--- a/dhall.html
+++ b/dhall.html
@@ -42,7 +42,7 @@
 	    <option value="15">Week 15</option>
           </select>
 
-	<h4>Day of Week</h4>
+	<h4>Day of the Week</h4>
           <select id="day">
             <option value="all" selected>All</option>
             <option value="monday">Monday</option>
