--- a/dhall.html
+++ b/dhall.html
@@ -44,13 +44,13 @@
 	<h4>Day of the Week</h4>
           <select id="day">
             <option value="allday" selected>All</option>
-            <option value="monday">Monday</option>
-            <option value="tuesday">Tuesday</option>
-	    <option value="wednesday">Wednesday</option>
-            <option value="thursday">Thursday</option>
-	    <option value="friday">Friday</option>
-            <option value="saturday">Saturday</option>
-	    <option value="sunday">Sunday</option>
+            <option value="1">Monday</option>
+            <option value="2">Tuesday</option>
+	    <option value="3">Wednesday</option>
+            <option value="4">Thursday</option>
+	    <option value="5">Friday</option>
+            <option value="6">Saturday</option>
+	    <option value="7">Sunday</option>
 	</select>
 	
 	
