Dennis is the bestest

--- a/dhall.html
+++ b/dhall.html
@@ -13,11 +13,11 @@
 
 	<h4>Semester</h4>
           <select id="semester">
-            <option value="allsem" selected>All</option>
-            <option value="F14">Fall 2014</option>
-            <option value="S15">Spring 2015</option>
-	    <option value="F15">Fall 2015</option>
-            <option value="S16">Spring 2016</option>
+            <option value="0" selected>All</option>
+            <option value="1">Fall 2014</option>
+            <option value="2">Spring 2015</option>
+	    <option value="3">Fall 2015</option>
+            <option value="4">Spring 2016</option>
           </select>
 
 
