--- a/dhall.html
+++ b/dhall.html
@@ -43,7 +43,7 @@
 
 	<h4>Day of the Week</h4>
           <select id="day">
-            <option value="allday" selected>All</option>
+            <option value="0" selected>All</option>
             <option value="1">Monday</option>
             <option value="2">Tuesday</option>
 	    <option value="3">Wednesday</option>
