--- a/dhall.html
+++ b/dhall.html
@@ -20,6 +20,7 @@
             <option value="4">Spring 2016</option>
           </select>
 
+<canvas width="960" height="500"></canvas>
 
 	<h4>Week</h4>
           <select id="week">
