changed 'allweek' to 0

--- a/dhall.html
+++ b/dhall.html
@@ -22,7 +22,7 @@
 
 	<h4>Week</h4>
           <select id="week">
-            <option value="allweek" selected>All</option>
+            <option value="0" selected>All</option>
             <option value="1">Week 1</option>
             <option value="2">Week 2</option>
 	    <option value="3">Week 3</option>
@@ -61,7 +61,7 @@
 	  <label><input id="togo" type="checkbox" checked> To-Go Box</label>
 	</div>
 
-  
+
 <canvas width="960" height="500"></canvas>
 
 
