--- a/dhall.html
+++ b/dhall.html
@@ -13,17 +13,16 @@
 
 	<h4>Semester</h4>
           <select id="semester">
-            <option value="allsem" selected>All</option>
-            <option value="F14">Fall 2014</option>
-            <option value="S15">Spring 2015</option>
-	    <option value="F15">Fall 2015</option>
-            <option value="S16">Spring 2016</option>
+            <option value="0" selected>All</option>
+            <option value="1">Fall 2014</option>
+            <option value="2">Spring 2015</option>
+	    <option value="3">Fall 2015</option>
+            <option value="4">Spring 2016</option>
           </select>
-
 
 	<h4>Week</h4>
           <select id="week">
-            <option value="allweek" selected>All</option>
+            <option value="0" selected>All</option>
             <option value="1">Week 1</option>
             <option value="2">Week 2</option>
 	    <option value="3">Week 3</option>
@@ -43,14 +42,14 @@
 
 	<h4>Day of the Week</h4>
           <select id="day">
-            <option value="allday" selected>All</option>
-            <option value="monday">Monday</option>
-            <option value="tuesday">Tuesday</option>
-	    <option value="wednesday">Wednesday</option>
-            <option value="thursday">Thursday</option>
-	    <option value="friday">Friday</option>
-            <option value="saturday">Saturday</option>
-	    <option value="sunday">Sunday</option>
+            <option value="0" selected>All</option>
+            <option value="1">Monday</option>
+            <option value="2">Tuesday</option>
+	    <option value="3">Wednesday</option>
+            <option value="4">Thursday</option>
+	    <option value="5">Friday</option>
+            <option value="6">Saturday</option>
+	    <option value="7">Sunday</option>
 	</select>
 	
 	
