--- a/dhall.html
+++ b/dhall.html
@@ -10,17 +10,23 @@
   <body>
     <h1>Grinnell College Dining Hall </h1>
 
-
-	<h4>Semester</h4>
-          <select id="semester">
+<table style="width:1000px">
+  <tr>
+    <th align="left"> <h4>Semester</h4></th>
+    <th align="left"><h4>Week</h4></th>
+    <th align="left"><h4>Day of the Week</h4></th>
+    <th align="left"><h4>Dining Option</h4></th>
+  </tr>
+  <tr>
+      <td>    <select id="semester">
             <option value="0" selected>All</option>
             <option value="1">Fall 2014</option>
             <option value="2">Spring 2015</option>
 	    <option value="3">Fall 2015</option>
             <option value="4">Spring 2016</option>
-          </select>
+          </select></td>
 
-	<h4>Week</h4>
+	   <td>
           <select id="week">
             <option value="0" selected>All</option>
             <option value="1">Week 1</option>
@@ -38,9 +44,9 @@
 	    <option value="13">Week 13</option>
             <option value="14">Week 14</option>
 	    <option value="15">Week 15</option>
-          </select>
+          </select></td>
 
-	<h4>Day of the Week</h4>
+	   <td>
           <select id="day">
             <option value="0" selected>All</option>
             <option value="1">Monday</option>
@@ -50,17 +56,17 @@
 	    <option value="5">Friday</option>
             <option value="6">Saturday</option>
 	    <option value="7">Sunday</option>
-	</select>
+	</select></td>
 	
 	
-	<h4>Dining Option</h4>
+	<td>
 	<div class="checkbox">
 	  <label><input id="diningin" type="checkbox" checked> Dining In</label>
-	</div>
-	<div class="checkbox">
+	</div></td>
+	<td><div class="checkbox">
 	  <label><input id="togo" type="checkbox" checked> To-Go Box</label>
-	</div>
-
+	</div></td>
+</tr>
 
 <script type="text/javascript" src="dhall.js"></script>
   </body>
