added accent color to dropdown menu table

--- a/dhall.html
+++ b/dhall.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Grinnell College Dining Hall </h1>
 
-<table style="width:1000px">
+<table style="width:1000px" bgcolor="#ededed">
   <tr>
     <th align="left"> <h4>Semester</h4></th>
     <th align="left"><h4>Week</h4></th>
@@ -67,6 +67,11 @@
     <label><input id="togo" type="checkbox" checked> To-Go Box</label>
   </div></td>
 
+</tr>
+<tr>
+  <td></td>
+</tr><tr>
+  <td></td>
 </tr>
 
 <script type="text/javascript" src="dhall.js"></script>
