--- a/dhall.html
+++ b/dhall.html
@@ -8,9 +8,9 @@
      <script src="crossfilter.min.js"></script>
   </head>
   <body>
-    <h1>Grinnell College Dining Hall </h1>
+    <h1>Grinnell College Dining Hall Use Data Visualization</h1>
 
-<table style="width:1000px" bgcolor="#ededed">
+<table style="width:1520px" bgcolor="#ededed">
   <tr>
     <th align="left"> <h4>Semester</h4></th>
     <th align="left"><h4>Week</h4></th>
@@ -47,14 +47,14 @@
 
 	   <td>
           <select id="day">
-            <option value="0" selected>All</option>
+            <option value="-1" selected>All</option>
             <option value="1">Monday</option>
             <option value="2">Tuesday</option>
       <option value="3">Wednesday</option>
             <option value="4">Thursday</option>
       <option value="5">Friday</option>
             <option value="6">Saturday</option>
-      <option value="7">Sunday</option>
+      <option value="0">Sunday</option>
   </select></td>
   
 </td>
